--- a/lib/fireemblemlegacy_web/templates/layout/app.html.eex
+++ b/lib/fireemblemlegacy_web/templates/layout/app.html.eex
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Fire Emblem Legacy RPG Forum">
     <meta name="author" content="falconpilot">
 
     <title>FEL - Fire Emblem Legacy</title>
@@ -13,6 +13,7 @@
   </head>
   <!-- BODY -->
   <body>
+    <!-- Scripts -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
