--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,8 +3,103 @@
 */
 
 body {
-
+  min-height: 100vh;
+  margin: 0;
+  background-color: #333;
+  color: #FFF;
+  font-family: "ChiaroSTDB", sans-serif;
+  line-height: 2em;
+  font-size: 1em;
 }
+
+header, main, footer {
+  position: relative;
+  width: 100%;
+}
+
+button {
+  font-family: "ChiaroSTDB";
+  font-size: 1em;
+  line-height: 1em;
+  text-align: center;
+}
+
+button:hover { cursor: pointer; }
+
+/*
+**  Page header
+*/
+
+header {
+  padding: 1em 200px;
+  box-sizing: border-box;
+  background-color: #DAA656;
+}
+
+header > h1 {
+  font-size: 2.5em;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1em;
+  text-align: center;
+}
+
+header > h1 > hr {
+  width: 100%;
+  height: 1px;
+  margin: 0;
+  border: none;
+  background-color: #000;
+}
+
+/*
+**  Main container
+*/
+
+main { flex: 1; }
+
+/*
+**  Page footer
+*/
+
+footer {}
+
+/*
+**  Sidebar
+*/
+
+#sidebar {
+  position: fixed;
+  top: calc(-100vh + 50px);
+  max-width: 200px;
+  width: 15vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 0 0 1em 0;
+  transition: 0.2s;
+  z-index: 90;
+}
+
+#sidebar > .sidebar-content {
+  flex: 1;
+  overflow: auto;
+}
+
+#sidebar.opened {
+  top: 0;
+  border-radius: 0;
+}
+
+button#sidebar-button {
+  height: 50px;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  color: #FFF;
+}
+
+button#sidebar-button,
+button#sidebar-button:active { outline: none; }
 
 /*
 **  Flex classes
@@ -21,3 +116,15 @@ body {
 
 .flex-row.center-h,
 .flex-col.center-v { justify-content: center; }
+
+/*
+**  Padding classes
+*/
+
+.padding-v,
+.padding-h { box-sizing: border-box; }
+
+.padding-v { padding: 1em 0; }
+.padding-h { padding: 0 1em; }
+
+.padding-v.padding-h { padding: 1em; }
